--- a/package.json
+++ b/package.json
@@ -51,8 +51,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint",
-      "pre-push": "npm run test"
+      "pre-commit": "npm run lint"
     }
   },
   "jest": {
