--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^0.19.2",
-    "google-auth-library": "git+https://github.com/Haliont/google-auth-library-nodejs.git",
-    "lodash": "^4.17.20"
+    "google-auth-library": "^6.1.0",
+    "lodash": "^4.17.20",
+    "querystring": "^0.2.0"
   },
   "devDependencies": {
     "delay": "^4.3.0",
