--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "axios": "^0.19.2",
     "google-auth-library": "^6.1.0",
     "lodash": "^4.17.20",
-    "querystring": "^0.2.0"
+    "querystring": "^0.2.0",
+    "stream": "0.0.2"
   },
   "devDependencies": {
     "delay": "^4.3.0",
