add events package

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^0.19.2",
+    "events": "^3.2.0",
     "google-auth-library": "^6.1.0",
     "lodash": "^4.17.20",
     "querystring": "^0.2.0",
